--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 
 	<title>Baloons</title>
 </head>
+
 <body>
 	<div class="container">
+		<!-- Header -->
 		<div class="header">
 			<img src="src/icons/Icon-logo.svg" alt="Логотип воздушные шары" class="header__logo">
 			<div class="header__container">
@@ -17,10 +22,55 @@
 					<span class="title-main__title">ТУРЫ НА ВОЗДУШНОМ ШАРЕ</span>
 					<span class="title-main__subtitle">незабываемое приключение ждет вас</span>
 				</h1>
-				<a href="#" class="button button_animated">наш каталог</a>
+				<a href="##" class="button button_animated">наш каталог</a>
 			</div>
 		</div>
-	</div>
 
+		<main>
+			<!-- About -->
+			<section class="about">
+				<div class="about__container">
+					<div class="text-align-center">
+						<h2 class="title-secondary margin-bottom-80px">НЕВЕРОЯТНОЕ ОЩУЩЕНИЕ СВОБОДЫ</h2>
+					</div>
+					<div class="row">
+						<div class="col-1-of-2">
+							<div class="about-article margin-bottom-45px">
+								<h3 class="margin-bottom-10px">ПОЗВОЛЬТЕ СЕБЕ ПРИКЛЮЧЕНИЕ</h3>
+								<p>Задача организации, в особенности же дальнейшее развитие различных форм
+									деятельности влечет за собой процесс внедрениям и модернизации соответствующий условий активизации.
+									Таким
+									образом начало повседневной работы по формированию позиции влечет.</p>
+							</div>
+							<div class="about-article margin-bottom-45px">
+								<h3 class="margin-bottom-10px">ВВЕРХ НА 6000 МЕТРОВ НАД УРОВНЕМ МОРЯ</h3>
+								<p>Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой
+									процесс внедрениям и модернизации соответствующий условий активизации. Таким образом начало повседневной
+									работы по формированию позиции влечет.</p>
+							</div>
+							<a href="##" class="button-text">
+								Узнать больше
+								<svg class="arrow-icon" width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path id="Arrow 2" d="M17.3536 4.35355C17.5488 4.15829 17.5488 3.84171 17.3536 3.64645L14.1716 0.464466C13.9763 0.269204 13.6597 0.269204 13.4645 0.464466C13.2692 0.659728 13.2692 0.976311 13.4645 1.17157L16.2929 4L13.4645 6.82843C13.2692 7.02369 13.2692 7.34027 13.4645 7.53553C13.6597 7.7308 13.9763 7.7308 14.1716 7.53553L17.3536 4.35355ZM0 4.5L17 4.5V3.5L0 3.5L0 4.5Z" fill="#777777"/>
+								</svg>
+							</a>
+						</div>
+						<div class="col-1-of-2">
+							<div class="composition">
+								<img src="./src/images/about-photo-1.jpeg" alt="" class="composition__photo composition__photo_n1">
+								<img src="./src/images/about-photo-2.jpeg" alt="" class="composition__photo composition__photo_n2">
+								<img src="./src/images/about-photo-3.jpeg" alt="" class="composition__photo composition__photo_n3">
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</section>
+
+			<!-- Cards about -->
+
+		</main>
+	</div>
 </body>
+
 </html>
