--- a/index.html
+++ b/index.html
@@ -80,37 +80,37 @@
 					<div class="row">
 						<div class="col-1-of-4">
 							<div class="text-align-center">
-								<div class="card">
-									<i class="card__icon icon-planet"></i>
-									<h3 class="card__title">ПРИКЛЮЧЕНИЕ</h3>
-									<p class="card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+								<div class="adventure-card">
+									<i class="adventure-card__icon icon-planet"></i>
+									<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
+									<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-1-of-4">
 							<div class="text-align-center">
-								<div class="card">
-									<i class="card__icon icon-pin"></i>
-									<h3 class="card__title">ПРИКЛЮЧЕНИЕ</h3>
-									<p class="card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+								<div class="adventure-card">
+									<i class="adventure-card__icon icon-pin"></i>
+									<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
+									<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-1-of-4">
 							<div class="text-align-center">
-								<div class="card">
-									<i class="card__icon icon-compass"></i>
-									<h3 class="card__title">ПРИКЛЮЧЕНИЕ</h3>
-									<p class="card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+								<div class="adventure-card">
+									<i class="adventure-card__icon icon-compass"></i>
+									<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
+									<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-1-of-4">
 							<div class="text-align-center">
-								<div class="card">
-									<i class="card__icon icon-direction"></i>
-									<h3 class="card__title">ПРИКЛЮЧЕНИЕ</h3>
-									<p class="card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+								<div class="adventure-card">
+									<i class="adventure-card__icon icon-direction"></i>
+									<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
+									<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
 								</div>
 							</div>
 						</div>
