--- a/index.html
+++ b/index.html
@@ -30,45 +30,43 @@
 		<main>
 			<!-- About -->
 			<section class="about">
-				<div class="about__container">
-					<div class="text-align-center">
-						<h2 class="about__title title-secondary">НЕВЕРОЯТНОЕ ОЩУЩЕНИЕ СВОБОДЫ</h2>
-					</div>
-					<div class="row">
-						<div class="col-1-of-2">
-							<div class="about__article margin-bottom-45px">
-								<h3 class="margin-bottom-10px">ПОЗВОЛЬТЕ СЕБЕ ПРИКЛЮЧЕНИЕ</h3>
-								<p>Задача организации, в особенности же дальнейшее развитие различных форм
-									деятельности влечет за собой процесс внедрениям и модернизации соответствующий условий активизации.
-									Таким
-									образом начало повседневной работы по формированию позиции влечет.</p>
-							</div>
-							<div class="about__article margin-bottom-45px">
-								<h3 class="margin-bottom-10px">ВВЕРХ НА 6000 МЕТРОВ НАД УРОВНЕМ МОРЯ</h3>
-								<p>Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой
-									процесс внедрениям и модернизации соответствующий условий активизации. Таким образом начало
-									повседневной
-									работы по формированию позиции влечет.</p>
-							</div>
-							<a href="##" class="button-text">
-								Узнать больше
-								<svg class="arrow-icon" width="18" height="8" viewBox="0 0 18 8" fill="none"
-									xmlns="http://www.w3.org/2000/svg">
-									<path id="Arrow 2"
-										d="M17.3536 4.35355C17.5488 4.15829 17.5488 3.84171 17.3536 3.64645L14.1716 0.464466C13.9763 0.269204 13.6597 0.269204 13.4645 0.464466C13.2692 0.659728 13.2692 0.976311 13.4645 1.17157L16.2929 4L13.4645 6.82843C13.2692 7.02369 13.2692 7.34027 13.4645 7.53553C13.6597 7.7308 13.9763 7.7308 14.1716 7.53553L17.3536 4.35355ZM0 4.5L17 4.5V3.5L0 3.5L0 4.5Z"
-										fill="#777777" />
-								</svg>
-							</a>
+				<div class="text-align-center">
+					<h2 class="about__title title-secondary">НЕВЕРОЯТНОЕ ОЩУЩЕНИЕ СВОБОДЫ</h2>
+				</div>
+				<div class="row">
+					<div class="col-1-of-2">
+						<div class="about__article margin-bottom-45px">
+							<h3 class="margin-bottom-10px">ПОЗВОЛЬТЕ СЕБЕ ПРИКЛЮЧЕНИЕ</h3>
+							<p>Задача организации, в особенности же дальнейшее развитие различных форм
+								деятельности влечет за собой процесс внедрениям и модернизации соответствующий условий активизации.
+								Таким
+								образом начало повседневной работы по формированию позиции влечет.</p>
 						</div>
-						<div class="col-1-of-2">
-							<div class="composition">
-								<img src="./src/images/about-photo-1.jpeg" alt="About-photo-1"
-									class="composition__photo composition__photo_n1">
-								<img src="./src/images/about-photo-2.jpeg" alt="About-photo-2"
-									class="composition__photo composition__photo_n2">
-								<img src="./src/images/about-photo-3.jpeg" alt="About-photo-3"
-									class="composition__photo composition__photo_n3">
-							</div>
+						<div class="about__article margin-bottom-45px">
+							<h3 class="margin-bottom-10px">ВВЕРХ НА 6000 МЕТРОВ НАД УРОВНЕМ МОРЯ</h3>
+							<p>Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой
+								процесс внедрениям и модернизации соответствующий условий активизации. Таким образом начало
+								повседневной
+								работы по формированию позиции влечет.</p>
+						</div>
+						<a href="##" class="button-text">
+							Узнать больше
+							<svg class="arrow-icon" width="18" height="8" viewBox="0 0 18 8" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
+								<path id="Arrow 2"
+									d="M17.3536 4.35355C17.5488 4.15829 17.5488 3.84171 17.3536 3.64645L14.1716 0.464466C13.9763 0.269204 13.6597 0.269204 13.4645 0.464466C13.2692 0.659728 13.2692 0.976311 13.4645 1.17157L16.2929 4L13.4645 6.82843C13.2692 7.02369 13.2692 7.34027 13.4645 7.53553C13.6597 7.7308 13.9763 7.7308 14.1716 7.53553L17.3536 4.35355ZM0 4.5L17 4.5V3.5L0 3.5L0 4.5Z"
+									fill="#777777" />
+							</svg>
+						</a>
+					</div>
+					<div class="col-1-of-2">
+						<div class="composition">
+							<img src="./src/images/about-photo-1.jpeg" alt="About-photo-1"
+								class="composition__photo composition__photo_n1">
+							<img src="./src/images/about-photo-2.jpeg" alt="About-photo-2"
+								class="composition__photo composition__photo_n2">
+							<img src="./src/images/about-photo-3.jpeg" alt="About-photo-3"
+								class="composition__photo composition__photo_n3">
 						</div>
 					</div>
 				</div>
@@ -76,42 +74,119 @@
 
 			<!-- Cards about -->
 			<section class="adventure">
-				<div class="adventure__container">
+				<div class="row">
+					<div class="col-1-of-4">
+						<div class="text-align-center">
+							<div class="adventure-card">
+								<i class="adventure-card__icon icon-planet"></i>
+								<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
+								<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных
+									в особенности же развитие различных</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-1-of-4">
+						<div class="text-align-center">
+							<div class="adventure-card">
+								<i class="adventure-card__icon icon-pin"></i>
+								<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
+								<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных
+									в особенности же развитие различных</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-1-of-4">
+						<div class="text-align-center">
+							<div class="adventure-card">
+								<i class="adventure-card__icon icon-compass"></i>
+								<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
+								<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных
+									в особенности же развитие различных</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-1-of-4">
+						<div class="text-align-center">
+							<div class="adventure-card">
+								<i class="adventure-card__icon icon-direction"></i>
+								<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
+								<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных
+									в особенности же развитие различных</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- Tours -->
+			<section class="tours">
+				<div class="text-align-center">
+					<h2 class="tours__title title-secondary">НАИБОЛЕЕ ПОПУЛЯРНЫЕ ТУРЫ</h2>
 					<div class="row">
-						<div class="col-1-of-4">
-							<div class="text-align-center">
-								<div class="adventure-card">
-									<i class="adventure-card__icon icon-planet"></i>
-									<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
-									<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+						<div class="col-1-of-3">
+							<div class="tours-card">
+								<div class="tours-card__side tours-card__side_front">
+									<div class="tours-card__image tours-card__image_1"></div>
+									<h4 class="tours-card__title">
+										<span class="tours-card__span tours-card__span_1">Группоывые</span>
+										<br>
+										<span class="tours-card__span tours-card__span_2">туры</span>
+									</h4>
+									<div class="tours-card__subtitle">
+										<ul>
+											<li>Группы от 6 человек</li>
+											<li>Продолжительность 2 час</li>
+											<li>В группе 1 гид</li>
+											<li>Дальность полета 6км</li>
+											<li>Бесплатные сувениры</li>
+										</ul>
+									</div>
 								</div>
+								<div class="tours-card__side tours-card__side_back">Back</div>
 							</div>
 						</div>
-						<div class="col-1-of-4">
-							<div class="text-align-center">
-								<div class="adventure-card">
-									<i class="adventure-card__icon icon-pin"></i>
-									<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
-									<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+						<div class="col-1-of-3">
+							<div class="tours-card">
+								<div class="tours-card__side tours-card__side_front">
+									<div class="tours-card__image tours-card__image_2"></div>
+									<h4 class="tours-card__title">
+										<span class="tours-card__span tours-card__span_1">Частные</span>
+										<br>
+										<span class="tours-card__span tours-card__span_2">туры</span>
+									</h4>
+									<div class="tours-card__subtitle">
+										<ul>
+											<li>Группы от 6 человек</li>
+											<li>Продолжительность 2 час</li>
+											<li>В группе 1 гид</li>
+											<li>Дальность полета 6км</li>
+											<li>Бесплатные сувениры</li>
+										</ul>
+									</div>
 								</div>
+								<div class="tours-card__side tours-card__side_back">Back</div>
 							</div>
 						</div>
-						<div class="col-1-of-4">
-							<div class="text-align-center">
-								<div class="adventure-card">
-									<i class="adventure-card__icon icon-compass"></i>
-									<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
-									<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
+						<div class="col-1-of-3">
+							<div class="tours-card">
+								<div class="tours-card__side tours-card__side_front">
+									<div class="tours-card__image tours-card__image_3"></div>
+									<h4 class="tours-card__title">
+										<span class="tours-card__span tours-card__span_1">Смотровые</span>
+										<br>
+										<span class="tours-card__span tours-card__span_2">площадки</span>
+									</h4>
+									<div class="tours-card__subtitle">
+										<ul>
+											<li>Группы от 6 человек</li>
+											<li>Продолжительность 2 час</li>
+											<li>В группе 1 гид</li>
+											<li>Дальность полета 6км</li>
+											<li>Бесплатные сувениры</li>
+										</ul>
+									</div>
 								</div>
-							</div>
-						</div>
-						<div class="col-1-of-4">
-							<div class="text-align-center">
-								<div class="adventure-card">
-									<i class="adventure-card__icon icon-direction"></i>
-									<h3 class="adventure-card__title">ПРИКЛЮЧЕНИЕ</h3>
-									<p class="adventure-card__subtitle">Задача организации, в особенности же дальнейшее развитие различных в особенности же развитие различных</p>
-								</div>
+								<div class="tours-card__side tours-card__side_back">Back</div>
 							</div>
 						</div>
 					</div>
