Добавление реализации обратной стороны карточки tours-card

--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
 										</ul>
 									</div>
 								</div>
-								<div class="tours-card__side tours-card__side_back">Back</div>
+								<div class="tours-card__side tours-card__side_back">
+									<p class="tours-card__caption">ПОЛНАЯ СТОИМОСТЬ:</p>
+									<p class="tours-card__price">5990₽</p>
+									<a href="##" class="tours-card__button button">забронировать</a>
+								</div>
 							</div>
 						</div>
 						<div class="col-1-of-3">
@@ -164,7 +168,11 @@
 										</ul>
 									</div>
 								</div>
-								<div class="tours-card__side tours-card__side_back">Back</div>
+								<div class="tours-card__side tours-card__side_back">
+									<p class="tours-card__caption">ПОЛНАЯ СТОИМОСТЬ:</p>
+									<p class="tours-card__price">5990₽</p>
+									<a href="##" class="tours-card__button button">забронировать</a>
+								</div>
 							</div>
 						</div>
 						<div class="col-1-of-3">
@@ -186,7 +194,11 @@
 										</ul>
 									</div>
 								</div>
-								<div class="tours-card__side tours-card__side_back">Back</div>
+								<div class="tours-card__side tours-card__side_back">
+									<p class="tours-card__caption">ПОЛНАЯ СТОИМОСТЬ:</p>
+									<p class="tours-card__price">5990₽</p>
+									<a href="##" class="tours-card__button button">забронировать</a>
+								</div>
 							</div>
 						</div>
 					</div>
