Внесение правок в блок Tours

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<section class="tours">
 				<div class="text-align-center">
 					<h2 class="tours__title title-secondary">НАИБОЛЕЕ ПОПУЛЯРНЫЕ ТУРЫ</h2>
-					<div class="row">
+					<div class="row margin-bottom-80px">
 						<div class="col-1-of-3">
 							<div class="tours-card">
 								<div class="tours-card__side tours-card__side_front">
@@ -202,6 +202,8 @@
 							</div>
 						</div>
 					</div>
+					<a href="##" class="tours-card__button button">забронировать</a>
+
 				</div>
 			</section>
 
