--- a/index.html
+++ b/index.html
@@ -203,7 +203,49 @@
 						</div>
 					</div>
 					<a href="##" class="tours-card__button button">забронировать</a>
+				</div>
+			</section>
 
+			<!-- Feedback -->
+			<section class="feedback">
+				<div class="feedback__gradient"></div>
+				<video class="feedback__background" muted loop autoplay>
+					<source src="../src/videos/feedback-background.mp4">
+					<source src="../src/videos/feedback-background.webm">
+				</video>
+				<div class="text-align-center">
+					<h2 class="title-secondary title-secondary_white margin-bottom-95px">ОТЗЫВЫ НАШИХ КЛИЕНТОВ</h2>
+					<div class="row">
+						<div class="feedback-card">
+							<figure class="feedback-card__avatar">
+								<div class="feedback-card__image feedback-card__image_1"></div>
+								<figcaption class="feedback-card__name">АНТОН РЯБИН</figcaption>
+							</figure>
+							<h3 class="feedback-card__title">Я ПОЛУЧИЛ МАССУ ВПЕЧАТЛЕНИЙ</h3>
+							<p class="feedback-card__subtitle">
+								Задача организации, в особенности же дальнейшее развитие
+								различных форм деятельности влечет за собой процесс внедрения и модернизации соответствующий
+								условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.
+							</p>
+						</div>
+					</div>
+					<div class="margin-bottom-95px">
+						<div class="row">
+							<div class="feedback-card">
+								<figure class="feedback-card__avatar">
+									<div class="feedback-card__image feedback-card__image_2"></div>
+									<figcaption class="feedback-card__name">ЛИЗА ФРОЛОВА</figcaption>
+								</figure>
+								<h3 class="feedback-card__title">ЭТО БЫЛО ВЕЛИКОЛЕПНО И НЕЗАБЫВАЕМО</h3>
+								<p class="feedback-card__subtitle">
+									Задача организации, в особенности же дальнейшее развитие
+									различных форм деятельности влечет за собой процесс внедрения и модернизации соответствующий
+									условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.
+								</p>
+							</div>
+						</div>
+					</div>
+					<a href="##" class="tours-card__button button">забронировать</a>
 				</div>
 			</section>
 
