--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 				<span class="title-main__title">ТУРЫ НА ВОЗДУШНОМ ШАРЕ</span>
 				<span class="title-main__subtitle">незабываемое приключение ждет вас</span>
 			</h1>
-			<a href="##" class="button button_animated">наш каталог</a>
+				<a href="##" class="button button_animated button_large-padding">наш каталог</a>
+			
 		</div>
 	</div>
 
@@ -31,7 +32,7 @@
 		<!-- About -->
 		<section class="about">
 			<div class="text-align-center">
-				<h2 class="about__title title-secondary">НЕВЕРОЯТНОЕ ОЩУЩЕНИЕ СВОБОДЫ</h2>
+				<h2 class="about__title title-secondary title-secondary_animated">НЕВЕРОЯТНОЕ ОЩУЩЕНИЕ СВОБОДЫ</h2>
 			</div>
 			<div class="row">
 				<div class="col-1-of-2">
@@ -121,7 +122,7 @@
 		<!-- Tours -->
 		<section class="tours">
 			<div class="text-align-center">
-				<h2 class="tours__title title-secondary">НАИБОЛЕЕ ПОПУЛЯРНЫЕ ТУРЫ</h2>
+				<h2 class="tours__title title-secondary title-secondary_animated">НАИБОЛЕЕ ПОПУЛЯРНЫЕ ТУРЫ</h2>
 				<div class="row margin-bottom-80px">
 					<div class="col-1-of-3">
 						<div class="tours-card">
@@ -214,22 +215,23 @@
 				<source src="../src/videos/feedback-background.webm">
 			</video>
 			<div class="text-align-center">
-				<h2 class="title-secondary title-secondary_white margin-bottom-95px">ОТЗЫВЫ НАШИХ КЛИЕНТОВ</h2>
-				<div class="row">
-					<div class="feedback-card">
-						<figure class="feedback-card__avatar">
-							<div class="feedback-card__image feedback-card__image_1"></div>
-							<figcaption class="feedback-card__name">АНТОН РЯБИН</figcaption>
-						</figure>
-						<h3 class="feedback-card__title">Я ПОЛУЧИЛ МАССУ ВПЕЧАТЛЕНИЙ</h3>
-						<p class="feedback-card__subtitle">
-							Задача организации, в особенности же дальнейшее развитие
-							различных форм деятельности влечет за собой процесс внедрения и модернизации соответствующий
-							условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.
-						</p>
+				<h2 class="title-secondary title-secondary_animated title-secondary_white margin-bottom-95px">ОТЗЫВЫ НАШИХ
+					КЛИЕНТОВ</h2>
+				<div class="feedback-card__container">
+					<div class="row">
+						<div class="feedback-card">
+							<figure class="feedback-card__avatar">
+								<div class="feedback-card__image feedback-card__image_1"></div>
+								<figcaption class="feedback-card__name">АНТОН РЯБИН</figcaption>
+							</figure>
+							<h3 class="feedback-card__title">Я ПОЛУЧИЛ МАССУ ВПЕЧАТЛЕНИЙ</h3>
+							<p class="feedback-card__subtitle">
+								Задача организации, в особенности же дальнейшее развитие
+								различных форм деятельности влечет за собой процесс внедрения и модернизации соответствующий
+								условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.
+							</p>
+						</div>
 					</div>
-				</div>
-				<div class="margin-bottom-95px">
 					<div class="row">
 						<div class="feedback-card">
 							<figure class="feedback-card__avatar">
@@ -261,7 +263,7 @@
 							<label for="name" class="book-form__label book-form__label_text">Ваше имя и фамилия</label>
 						</div>
 						<div class="book-form__group">
-							<input type="text" class="book-form__input book-form__input_text" placeholder="Почта" id="email"
+							<input type="email" class="book-form__input book-form__input_text" placeholder="Почта" id="email"
 								pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" required>
 							<label for="email" class="book-form__label book-form__label_text">Ваш email</label>
 						</div>
@@ -295,24 +297,24 @@
 			<a href="#">
 				<img src="src/icons/Icon-logo.svg" alt="Логотип воздушные шары" class="footer__logo">
 			</a>
-				<ul class="footer__nav-menu">
-					<li class="footer__nav-item">
-						<a href="##" class="footer__nav-link">О НАС</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="##" class="footer__nav-link">СКИДКИ</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="##" class="footer__nav-link">ЛУЧШИЕ ТУРЫ</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="##" class="footer__nav-link">КАЛЬКУЛЯТОР ЦЕНЫ</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="##" class="footer__nav-link">СВЯЗАТЬСЯ С НАМИ</a>
-					</li>
-				</ul>
-			</div>
+			<ul class="footer__nav-menu">
+				<li class="footer__nav-item">
+					<a href="##" class="footer__nav-link">О НАС</a>
+				</li>
+				<li class="footer__nav-item">
+					<a href="##" class="footer__nav-link">СКИДКИ</a>
+				</li>
+				<li class="footer__nav-item">
+					<a href="##" class="footer__nav-link">ЛУЧШИЕ ТУРЫ</a>
+				</li>
+				<li class="footer__nav-item">
+					<a href="##" class="footer__nav-link">КАЛЬКУЛЯТОР ЦЕНЫ</a>
+				</li>
+				<li class="footer__nav-item">
+					<a href="##" class="footer__nav-link">СВЯЗАТЬСЯ С НАМИ</a>
+				</li>
+			</ul>
+		</div>
 		</div>
 	</footer>
 </body>
