--- a/index.html
+++ b/index.html
@@ -15,6 +15,34 @@
 
 <body>
 
+	<!-- Burger menu -->
+	<div class="burger-menu">
+		<input type="checkbox" class="burger-menu__toggle" id="toggle">
+		<label for="toggle" class="burger-menu__button">
+			<span class="burger-menu__button-line"></span>
+		</label>
+		<div class="burger-menu__overlay"></div>
+		<nav class="burger-menu__nav">
+			<ul class="burger-menu__list">
+				<li class="burger-menu__item">
+					<a href="#" class="burger-menu__link">О НАС</a>
+				</li>
+				<li class="burger-menu__item">
+					<a href="#" class="burger-menu__link">СКИДКИ</a>
+				</li>
+				<li class="burger-menu__item">
+					<a href="#" class="burger-menu__link">ЛУЧШИЕ ТУРЫ</a>
+				</li>
+				<li class="burger-menu__item">
+					<a href="#" class="burger-menu__link">КАЛЬКУЛЯТОР ЦЕНЫ</a>
+				</li>
+				<li class="burger-menu__item">
+					<a href="#" class="burger-menu__link">СВЯЗАТЬСЯ С НАМИ</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
+
 	<!-- Header -->
 	<div class="header">
 		<img src="src/icons/Icon-logo.svg" alt="Логотип воздушные шары" class="header__logo">
@@ -23,8 +51,8 @@
 				<span class="title-main__title">ТУРЫ НА ВОЗДУШНОМ ШАРЕ</span>
 				<span class="title-main__subtitle">незабываемое приключение ждет вас</span>
 			</h1>
-				<a href="##" class="button button_animated button_large-padding">наш каталог</a>
-			
+			<a href="##" class="button button_animated button_large-padding">наш каталог</a>
+
 		</div>
 	</div>
 
